gcc/testsuite/g++.old-deja/g++.jason/temporary5.C
@@ -1,6 +1,6 @@
-// { dg-do run  }
 // PRMS Id: 6604
-// Bug: Scoped constructor call is not properly recognized as a functional cast
+// Old bug: Scoped constructor call is not properly recognized as a functional cast
+// But after DR 147 A::A() is a constructor call, not a functional cast.
 
 int c;
 
@@ -12,6 +12,8 @@ struct A {
 
 int main ()
 {
-  A::A();
+  A a;
+  a.A::A();			// { dg-error "" }
+  A::A();			// { dg-error "" }
   return c;
 }
