gcc/testsuite/g++.old-deja/g++.pt/ctor2.C
@@ -10,4 +10,4 @@ struct A {
 template <class T>
 A<T>::A<T>()   // { dg-error "invalid use of constructor|qualified name" }
 {
-}
+} // { dg-error "end of input" }
